Changed to block grid for hotels, fixed the issue with the last item being right-aligned

--- a/src/scss/layout/_home.scss
+++ b/src/scss/layout/_home.scss
@@ -54,15 +54,6 @@
     background-color: #DFDFDF;
 }
 
-.hotel-item-container {
-    margin-bottom: 20px;
-
-    img {
-        height: 250px;
-        width: 100%;
-    }
-}
-
 .hotel-item-description-container {
     position: relative;
     height: 140px;
